# kernel-manager

./: .clang-tidy  .gitignore  CMakeLists.txt  Changelog.md  Makefile  README.md  cachyos-kernel-manager.desktop  cachyoskm_locale.qrc  compile_flags.txt  configure.sh  meson.build  meson_options.txt  org.cachyos.cachyos-kernel-manager.pkexec.policy  sonar-project.properties
.github/workflows/: build.yml  checks.yml  sonar.yml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
lang/: cachyos-kernel-manager_de.ts  cachyos-kernel-manager_pl.ts  cachyos-kernel-manager_ru.ts  cachyos-kernel-manager_tr.ts
scripts/: auto-changelog.sh  format_file.sh
src/: aur_kernel.cpp  aur_kernel.hpp  compile_options.json  conf-options-page.hpp  conf-options-page.ui  conf-patches-page.hpp  conf-patches-page.ui  conf-window.cpp  conf-window.hpp  conf-window.ui  ini.hpp  kernel.cpp  kernel.hpp  km-window.cpp  km-window.hpp  km-window.ui  main.cpp  mkoptions.py  rootshell.sh  terminal-helper  utils.cpp  utils.hpp
subprojects/: fmt.wrap
subprojects/packagefiles/fmt/: meson.build
